Specify Tagstore API more accurately
