# tagstore/api/v1/views/taxonomies.py
@@ -10,14 +10,19 @@ from rest_framework.decorators import action
 from rest_framework.exceptions import ValidationError
 from rest_framework.response import Response
 
+from blockstore.apps.api.schema import api_method
 from tagstore.models import (
     Entity,
     EntityId,
     Tag,
     Taxonomy,
 )
-
-from tagstore.api.serializers import TaxonomySerializer, TagWithHierarchySerializer
+from tagstore.api.serializers import (
+    EmptyObjectSerializer,
+    TagSerializer,
+    TagWithHierarchySerializer,
+    TaxonomySerializer,
+)
 
 logger = logging.getLogger(__name__)
 
@@ -36,10 +41,11 @@ class TaxonomyViewSet(viewsets.GenericViewSet):
         When creating a tag from the browseable API, show the correct form.
         Otherwise, show the form for creating a taxonomy.
         """
-        if self.action.endswith('tag'):
+        if self.action.endswith('tag') or self.action.endswith('tags'):
             return TagWithHierarchySerializer
         return TaxonomySerializer
 
+    @swagger_auto_schema(operation_id="get_taxonomies")
     def list(self, request):  # pylint: disable=unused-argument
         """
         Get a list of all taxonomies.
@@ -48,6 +54,7 @@ class TaxonomyViewSet(viewsets.GenericViewSet):
         serializer = TaxonomySerializer(page, many=True)
         return self.get_paginated_response(serializer.data)
 
+    @swagger_auto_schema(operation_id="get_taxonomy")
     def retrieve(self, request, pk):  # pylint: disable=unused-argument
         """
         Get a specific taxonomy.
@@ -55,6 +62,7 @@ class TaxonomyViewSet(viewsets.GenericViewSet):
         taxonomy = get_object_or_404(self.queryset, pk=pk)
         return Response(TaxonomySerializer(taxonomy).data)
 
+    @swagger_auto_schema(operation_id="delete_taxonomy")
     def delete(self, request, pk):  # pylint: disable=unused-argument
         """
         Delete a specific taxonomy and all of its tags.
@@ -63,6 +71,7 @@ class TaxonomyViewSet(viewsets.GenericViewSet):
         taxonomy.delete()
         return Response({})
 
+    @swagger_auto_schema(operation_id="create_taxonomy")
     def create(self, request):
         """
         Create a new Taxonomy
@@ -87,13 +96,7 @@ class TaxonomyViewSet(viewsets.GenericViewSet):
         return Response(TaxonomySerializer(taxonomy).data)
 
     @action(detail=True, methods=['get'])
-    @swagger_auto_schema(
-        responses={200: TagWithHierarchySerializer(many=True)},
-        # Set the operation_id to "..._tags_list" to avoid conflict with
-        # the "get one specific tag" endpoint which has the same auto-generated
-        # operation ID by default ("..._tags_read")
-        operation_id="taxonomies_tags_list",
-    )
+    @swagger_auto_schema(operation_id="get_taxonomy_tags")
     def tags(self, request, pk=None):  # pylint: disable=unused-argument
         """
         List the tags in this taxonomy.
@@ -106,15 +109,16 @@ class TaxonomyViewSet(viewsets.GenericViewSet):
         return self.get_paginated_response(TagWithHierarchySerializer(page, many=True).data)
 
     @action(detail=True, url_path=r'tags/(?P<tag_name>.+)')
+    @api_method(TagWithHierarchySerializer(), operation_id="get_taxonomy_tag")
     def tag(self, request, pk, tag_name: str):  # pylint: disable=unused-argument
         """
         Get a specific tag in the taxonomy
         """
         taxonomy = get_object_or_404(self.queryset, pk=pk)
-        tag = get_object_or_404(taxonomy.tags, name__iexact=tag_name)
-        return Response(TagWithHierarchySerializer(tag).data)
+        return get_object_or_404(taxonomy.tags, name__iexact=tag_name)
 
     @tag.mapping.delete
+    @api_method(EmptyObjectSerializer(), operation_id="delete_taxonomy_tag")
     def delete_tag(self, request, pk, tag_name: str):  # pylint: disable=unused-argument
         """
         Delete a tag
@@ -122,9 +126,10 @@ class TaxonomyViewSet(viewsets.GenericViewSet):
         taxonomy = get_object_or_404(self.queryset, pk=pk)
         tag = get_object_or_404(taxonomy.tags, name__iexact=tag_name)
         tag.delete()
-        return Response({})
+        return {}
 
     @tags.mapping.post
+    @api_method(TagWithHierarchySerializer(), operation_id="add_taxonomy_tag", request_body=TagSerializer)
     def add_tag(self, request, pk):
         """
         Add a tag to the taxonomy, if it doesn't already exist
@@ -138,4 +143,4 @@ class TaxonomyViewSet(viewsets.GenericViewSet):
             tag = taxonomy.add_tag(tag_name, parent_tag=parent_tag)
         except Tag.AlreadyExistsError:
             raise ValidationError("That tag exists elsewhere in the hierarchy.")
-        return Response(TagWithHierarchySerializer(tag).data)
+        return tag
